# agentrr-rs

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  LICENSE  README.md  clippy.toml
.github/workflows/: ci.yml  release.yml
crates/agentrr-cli/: Cargo.toml
crates/agentrr-cli/src/: main.rs
crates/agentrr-cli/tests/: cli.rs
crates/agentrr-core/: Cargo.toml
crates/agentrr-core/src/: lib.rs
crates/agentrr-match/: Cargo.toml
crates/agentrr-match/src/: lib.rs
crates/agentrr-match/src/snapshots/: agentrr_match__tests__nested_unsorted.snap  agentrr_match__tests__nfc_string.snap
crates/agentrr-proxy/: Cargo.toml
crates/agentrr-proxy/src/: lib.rs
crates/agentrr-sdk/: Cargo.toml
crates/agentrr-sdk/examples/: agent_loop.rs
crates/agentrr-sdk/src/: lib.rs
crates/agentrr-store/: Cargo.toml
crates/agentrr-store/src/: lib.rs
docs/: architecture.md  format.md  integrations.md  matching.md
