[workspace]
resolver = "2"
members = [
    "crates/agentrr-core",
    "crates/agentrr-store",
    "crates/agentrr-match",
    "crates/agentrr-proxy",
    "crates/agentrr-sdk",
    "crates/agentrr-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
license = "Apache-2.0"
repository = "https://github.com/agentrr/agentrr"
authors = ["agentrr contributors"]

[workspace.dependencies]
# internal crates
agentrr-core = { path = "crates/agentrr-core" }
agentrr-store = { path = "crates/agentrr-store" }
agentrr-match = { path = "crates/agentrr-match" }
agentrr-proxy = { path = "crates/agentrr-proxy" }
agentrr-sdk = { path = "crates/agentrr-sdk" }

# runtime / proxy
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "signal",
    "fs",
    "io-util",
    "time",
    "sync",
] }
axum = "0.7"
hyper = { version = "1", features = ["http1", "http2", "client"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
url = "2"
bytes = "1"

# data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
blake3 = "1"
uuid = { version = "1", features = ["v7", "serde"] }
regex = "1"
unicode-normalization = "0.1"
zip = { version = "2", default-features = false, features = ["deflate"] }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }

# cli / ux
clap = { version = "4", features = ["derive", "env"] }
owo-colors = "4"
comfy-table = "7"
indicatif = "0.17"

# observability + errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"

# testing
insta = "1"
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
