[package]
name = "agentrr-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Deterministic record & replay for AI agents"

[[bin]]
name = "agentrr"
path = "src/main.rs"

[dependencies]
agentrr-core = { workspace = true }
agentrr-store = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
comfy-table = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
agentrr-core = { workspace = true }
agentrr-store = { workspace = true }
serde_json = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
