[package]
name = "agentrr-match"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Canonical request normalization + match keys for agentrr replay"

[dependencies]
agentrr-core = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
unicode-normalization = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
