[package]
name = "agentrr-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Optional in-process Rust SDK for agentrr record/replay"

[dependencies]
agentrr-core = { workspace = true }
agentrr-store = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[example]]
name = "agent_loop"
path = "examples/agent_loop.rs"
