[package]
name = "agentrr-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SQLite + BLAKE3 content-addressed blob store for agentrr runs"

[dependencies]
agentrr-core = { workspace = true }
agentrr-match = { workspace = true }
rusqlite = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
